Changelog
=========

4.7-dev - (unreleased)
----------------------

4.6 - (2012-03-30)
------------------

4.5 - (2012-02-15)
------------------
 * Bug fix: fixed tests [tiberich]

4.4 - (2012-02-10)
------------------
 * Bug fix: fixed a problem with related fields that are empty [tiberich #4942]

4.3 - (2012-02-02)
------------------
 * Bug fix: fixed a problem inserting related items in rdf stream when relation field is single value [tiberich #4992]

4.2 - (2011-12-07)
------------------
* Bug fix: Unindex temporary objects created in portal_factory
  [voineali #4822]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Bug fix: use getFolderContents instead of objectValues() to retrieve
  children [tiberich #4418] (v0.13 backport)
* Bug fix: Fix tests for eea.rdfmarshaller
  [ichimdav #4340]
* Change: use dcterm namespace for metadata instead of dc
  [tiberich #4250]
* Cleaned: pyflakes warnings
  [ichimdav #4141]
* Cleaned: pylint violations
  [ichimdav #4140]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.0.4 compatible release
  [ghicaale #4258]

0.8 - (2011-02-09)
------------------
* Bug fix: skip fields for which the accessor cannot be determined
  [tiberich #3982]

0.7 - (2010-12-16)
------------------
* set surf logging level to CRITICAL to avoid all INFO messages
  [vincisas #3951]

0.6 - (2010-11-10)
------------------
* typo fix for tests
  [vincisas]

0.5 - (2010-09-30)
------------------
* dcterms:hasPart added to folderish content
  [vincisas #3519]
* dcterms:isPartOf added to contained content
  [vincisas #3519]

0.4 (2010-09-06)
----------------
* use accessor to get the value of fields
  [tiberich #3550]
* 'file' added to blacklist as a temporary fix for encode error
  [ghicaale]
* under marshaller.py added temporary fix for: 'tuple' object has no attribute 'replace'
  [ghicaale]
* Silent failure with schema or rdf generation, errors are logged
  [vincisas #3564]